--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -260,19 +260,27 @@ input[type="checkbox"]:checked+label:hover {
 
 .signup__success-message {
     position: fixed;
-    top: 50%;
+    top: 55%;
     left: 50%;
+    border: 10px solid var(--color-maincolor);
     font-size: 20px;
     color: var(--color-white);
-    width: fit-content;
-    transform: translate(-50%, -50%);
-    z-index: 4;
     background-color: var(--color-maincolor);
     border-radius: 20px;
     padding: 25px;
-    box-shadow: 0px 0px 4px color-mix(in srgb, var(--color-black) 15%, transparent);
+    width: fit-content;
+    transform: translate(-50%, -50%);
+    z-index: 4;
+    box-shadow: 0px 0px 4px color-mix(in srgb, var(--color-black) 100%, transparent);
+    transition: top 200ms ease-in-out;
+    outline: none;
 }
 
+.signup__success-message.startposition {
+    top: 150%;
+}
+
+
 .signup__success-message::backdrop {
-    background-color: color-mix(in srgb, var(--color-maincolor) 90%, transparent);
+    background-color: color-mix(in srgb, var(--color-maincolor) 30%, transparent);
 }
