--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -35,7 +35,6 @@ main {
     min-width: 26.875rem;
     height: 100%;
     background-color: var(--color-white);
-    overflow-y: scroll;
 }
 
 .content-left::-webkit-scrollbar {
@@ -83,6 +82,8 @@ main {
 .contact-list {
     width: 100%;
     padding: 0rem 3.25rem;
+    overflow-y: scroll;
+    padding-bottom: 6.25rem;
 }
 
 .contact-list__item {
@@ -107,6 +108,7 @@ main {
     width: 100%;
     border-bottom: 1px solid var(--color-lightgrey);
     padding: 1.0625rem 2.25rem;
+    font-size: 1.25rem;
 }
 
 .contact-list__item img {
